# Lilith-AI

./: .env.example  .gitignore  README.md  _merge_tools.py  langgraph.json  lilith_tray.py  pyproject.toml  reasonix.toml  server.py  start.bat  stop.bat
archive/: app.py  main.py  patch_server.py  patch_server2.py
lilith_bot/: __init__.py  _evo_tools.py  affection_engine.py  affection_events.py  autonomous.py  evolution_engine.py  feedback_system.py  graph.py  memory_store.py  persona.py  personality.py  pusher.py  reasoning_patch.py  state.py  tools.py  trace_logger.py
